--- a/index.html
+++ b/index.html
@@ -899,7 +899,7 @@
                         <h3>📄 User Manual</h3>
                         <p>Comprehensive guide with setup instructions, strategy explanations, and optimization tips.
                         </p>
-                        <a href="OrangePulse_v3.0_User_Manual.pdf" download class="btn btn-secondary">Download PDF</a>
+                        <a href="OrangePulse_User_Manual.pdf" download class="btn btn-secondary">Download Manual</a>
                     </div>
 
 
