--- a/index.html
+++ b/index.html
@@ -896,10 +896,9 @@
 
                 <div class="contact-grid">
                     <div class="contact-option">
-                        <h3>📄 User Manual</h3>
-                        <p>Comprehensive guide with setup instructions, strategy explanations, and optimization tips.
-                        </p>
-                        <a href="OrangePulse_User_Manual.pdf" download class="btn btn-secondary">Download Manual</a>
+                        <h3>📄 Quick Start Guide</h3>
+                        <p>Get up and running fast with our quick start guide. Step-by-step setup instructions.</p>
+                        <a href="OrangePulse_v3.0_QuickStart.pdf" download class="btn btn-secondary">Download PDF</a>
                     </div>
 
 
