--- a/thank-you.html
+++ b/thank-you.html
@@ -232,7 +232,7 @@
 
             <div class="action-buttons">
                 <a href="index.html" class="btn btn-secondary">Return to Homepage</a>
-                <a href="OrangePulse_User_Manual.pdf" download class="btn btn-primary">Download Manual</a>
+                <a href="OrangePulse_v3.0_User_Manual.pdf" download class="btn btn-primary">Download Manual</a>
             </div>
         </div>
     </section>
