Update email templates with branded logo and grey header background

--- a/tradingview-invite-email.html
+++ b/tradingview-invite-email.html
@@ -20,7 +20,7 @@
         }
 
         .header {
-            background: linear-gradient(135deg, #10B981 0%, #34D399 100%);
+            background: #3a4149;
             color: white;
             padding: 40px 30px;
             text-align: center;
@@ -28,9 +28,9 @@
         }
 
         .logo {
-            max-width: 180px;
+            max-width: 400px;
             height: auto;
-            margin-bottom: 15px;
+            margin-bottom: 10px;
         }
 
         .header h1 {
@@ -125,7 +125,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="https://orangepulse.net/Logo/logo.png" alt="OrangePulse Logo" class="logo">
+            <img src="https://orangepulse.net/Logo/orange-pulse-bot-logo.jpg" alt="OrangePulse Logo" class="logo">
             <h1>✅ TradingView Invite Sent!</h1>
             <p style="margin: 10px 0 0 0; font-size: 16px;">Your script access is on the way</p>
         </div>
@@ -134,7 +134,8 @@
             <div class="success-box">
                 <h2 style="margin: 0 0 10px 0; color: #155724;">🎉 Great News!</h2>
                 <p style="margin: 0; font-size: 16px;">We've sent your TradingView script invite for
-                    <strong>OrangePulse</strong></p>
+                    <strong>OrangePulse</strong>
+                </p>
             </div>
 
             <p style="font-size: 18px;">Hi there! 👋</p>
