--- a/welcome-email-branded.html
+++ b/welcome-email-branded.html
@@ -20,7 +20,7 @@
         }
 
         .header {
-            background: linear-gradient(135deg, #F7931A 0%, #FFA940 100%);
+            background: #3a4149;
             color: white;
             padding: 40px 30px;
             text-align: center;
@@ -28,9 +28,9 @@
         }
 
         .logo {
-            max-width: 200px;
+            max-width: 400px;
             height: auto;
-            margin-bottom: 20px;
+            margin-bottom: 10px;
         }
 
         .header h1 {
@@ -104,7 +104,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="https://orangepulse.net/Logo/logo.png" alt="OrangePulse Logo" class="logo">
+            <img src="https://orangepulse.net/Logo/orange-pulse-bot-logo.jpg" alt="OrangePulse Logo" class="logo">
             <h1>🎉 Welcome to OrangePulse!</h1>
             <p style="margin: 10px 0 0 0; font-size: 16px;">Your journey to automated trading starts now</p>
         </div>
