Update email colors and welcome text

--- a/tradingview-invite-email.html
+++ b/tradingview-invite-email.html
@@ -20,7 +20,7 @@
         }
 
         .header {
-            background: #3a4149;
+            background: #3e4450;
             color: white;
             padding: 40px 30px;
             text-align: center;
@@ -59,9 +59,9 @@
         }
 
         .success-box {
-            background: #d4edda;
-            border: 1px solid #c3e6cb;
-            color: #155724;
+            background: #fff3e0;
+            border: 2px solid #F7931A;
+            color: #E65100;
             padding: 15px;
             border-radius: 6px;
             margin: 20px 0;
@@ -132,7 +132,7 @@
 
         <div class="content">
             <div class="success-box">
-                <h2 style="margin: 0 0 10px 0; color: #155724;">🎉 Great News!</h2>
+                <h2 style="margin: 0 0 10px 0; color: #E65100;">🎉 Great News!</h2>
                 <p style="margin: 0; font-size: 16px;">We've sent your TradingView script invite for
                     <strong>OrangePulse</strong>
                 </p>
