--- a/welcome-email-branded.html
+++ b/welcome-email-branded.html
@@ -20,7 +20,7 @@
         }
 
         .header {
-            background: #3a4149;
+            background: #3e4450;
             color: white;
             padding: 40px 30px;
             text-align: center;
@@ -105,7 +105,7 @@
     <div class="container">
         <div class="header">
             <img src="https://orangepulse.net/Logo/orange-pulse-bot-logo.jpg" alt="OrangePulse Logo" class="logo">
-            <h1>🎉 Welcome to OrangePulse!</h1>
+            <h1>🎉 Welcome to our family!</h1>
             <p style="margin: 10px 0 0 0; font-size: 16px;">Your journey to automated trading starts now</p>
         </div>
 
