--- a/tradingview-invite-email.html
+++ b/tradingview-invite-email.html
@@ -59,9 +59,9 @@
         }
 
         .success-box {
-            background: #fff3e0;
-            border: 2px solid #F7931A;
-            color: #E65100;
+            background: #fff3cd;
+            border: 2px solid #ffc107;
+            color: #333;
             padding: 15px;
             border-radius: 6px;
             margin: 20px 0;
@@ -132,7 +132,7 @@
 
         <div class="content">
             <div class="success-box">
-                <h2 style="margin: 0 0 10px 0; color: #E65100;">🎉 Great News!</h2>
+                <h2 style="margin: 0 0 10px 0; color: #F7931A;">🎉 Great News!</h2>
                 <p style="margin: 0; font-size: 16px;">We've sent your TradingView script invite for
                     <strong>OrangePulse</strong>
                 </p>
