Remove success box and update orange to warmer shade #e9983d

--- a/tradingview-invite-email.html
+++ b/tradingview-invite-email.html
@@ -48,42 +48,32 @@
             background: #f8f9fa;
             padding: 15px;
             margin: 15px 0;
-            border-left: 4px solid #F7931A;
+            border-left: 4px solid #e9983d;
             border-radius: 6px;
         }
 
         .step-number {
-            color: #F7931A;
+            color: #e9983d;
             font-weight: bold;
             font-size: 18px;
         }
 
-        .success-box {
-            background: #fff3cd;
-            border: 2px solid #ffc107;
-            color: #333;
-            padding: 15px;
-            border-radius: 6px;
-            margin: 20px 0;
-            text-align: center;
-        }
-
         .button {
             display: inline-block;
-            background: linear-gradient(135deg, #F7931A 0%, #FFA940 100%);
+            background: linear-gradient(135deg, #e9983d 0%, #FFA940 100%);
             color: white !important;
             padding: 12px 30px;
             text-decoration: none;
             border-radius: 6px;
             font-weight: bold;
             margin: 10px 0;
-            box-shadow: 0 4px 12px rgba(247, 147, 26, 0.3);
+            box-shadow: 0 4px 12px rgba(233, 152, 61, 0.3);
             transition: all 0.3s;
         }
 
         .button:hover {
             transform: translateY(-2px);
-            box-shadow: 0 6px 16px rgba(247, 147, 26, 0.4);
+            box-shadow: 0 6px 16px rgba(233, 152, 61, 0.4);
         }
 
         .footer {
@@ -96,7 +86,7 @@
         }
 
         .highlight {
-            color: #F7931A;
+            color: #e9983d;
             font-weight: bold;
         }
 
@@ -112,7 +102,7 @@
         }
 
         a {
-            color: #F7931A;
+            color: #e9983d;
             text-decoration: none;
         }
 
@@ -131,13 +121,6 @@
         </div>
 
         <div class="content">
-            <div class="success-box">
-                <h2 style="margin: 0 0 10px 0; color: #F7931A;">🎉 Great News!</h2>
-                <p style="margin: 0; font-size: 16px;">We've sent your TradingView script invite for
-                    <strong>OrangePulse</strong>
-                </p>
-            </div>
-
             <p style="font-size: 18px;">Hi there! 👋</p>
 
             <p>Your invite has been successfully sent to your TradingView account:</p>
@@ -146,7 +129,7 @@
                 <strong>Username:</strong> [TRADINGVIEW_USERNAME]
             </div>
 
-            <h2 style="color: #F7931A; margin-top: 30px;">📋 Next Steps:</h2>
+            <h2 style="color: #e9983d; margin-top: 30px;">📋 Next Steps:</h2>
 
             <div class="step">
                 <div class="step-number">Step 1: Check TradingView Notifications 🔔</div>
