--- a/index.html
+++ b/index.html
@@ -673,14 +673,15 @@
             <div class="pricing-grid">
                 <!-- Monthly Plan -->
                 <div class="pricing-card glass">
-                    <div class="pricing-badge">Most Flexible</div>
+                    <div class="pricing-badge" style="background: #28a745;">🎁 14-Day Free Trial</div>
                     <h3 class="pricing-title">Monthly</h3>
                     <div class="pricing-price">
-                        <span class="price-currency">$</span>
-                        <span class="price-amount">99</span>
-                        <span class="price-period">/month</span>
+                        <div style="font-size: 24px; color: #28a745; font-weight: bold; margin-bottom: 5px;">FREE for 14
+                            days</div>
+                        <div style="font-size: 16px; color: #888;">Then <span class="price-currency">$</span><span
+                                class="price-amount">99</span><span class="price-period">/month</span></div>
                     </div>
-                    <p class="pricing-description">Perfect for testing and short-term trading campaigns</p>
+                    <p class="pricing-description">Try OrangePulse risk-free with full access to all features</p>
 
                     <ul class="pricing-features">
                         <li>✓ Full bot access</li>
@@ -693,10 +694,10 @@
                     </ul>
 
                     <a href="https://buy.stripe.com/6oU7sM6yGeLAgDSfLd9Zm01" class="btn btn-primary btn-lg pricing-cta">
-                        Start Monthly Plan
+                        Start Free Trial
                     </a>
 
-                    <p class="pricing-note">Billed monthly • Cancel anytime</p>
+                    <p class="pricing-note">No credit card charge for 14 days • Cancel anytime</p>
                 </div>
 
                 <!-- Lifetime Plan -->
@@ -828,6 +829,23 @@
                         </ul>
                         <p>Most traders set these to dates far in the future and only reduce the timestamp if needed
                             during a position.</p>
+                    </div>
+                </div>
+
+                <div class="faq-item">
+                    <button class="faq-question">
+                        <span>Is there a free trial available?</span>
+                        <span class="faq-icon">+</span>
+                    </button>
+                    <div class="faq-answer">
+                        <p>Yes! We offer a <strong>14-day free trial</strong> on the Monthly plan. You get full access
+                            to all 4 strategies, complete documentation, TradingView script invite, and priority
+                            support.</p>
+                        <p>Your credit card will be required to start the trial, but <strong>you won't be charged for 14
+                                days</strong>. If you decide OrangePulse isn't for you, simply cancel before the trial
+                            ends and you pay nothing. No questions asked.</p>
+                        <p>The trial gives you plenty of time to test the bot, backtest strategies, and see real
+                            performance before committing to a subscription.</p>
                     </div>
                 </div>
 
