--- a/index.html
+++ b/index.html
@@ -676,10 +676,9 @@
                     <div class="pricing-badge" style="background: #28a745;">🎁 14-Day Free Trial</div>
                     <h3 class="pricing-title">Monthly</h3>
                     <div class="pricing-price">
-                        <div style="font-size: 24px; color: #28a745; font-weight: bold; margin-bottom: 5px;">FREE for 14
-                            days</div>
-                        <div style="font-size: 16px; color: #888;">Then <span class="price-currency">$</span><span
-                                class="price-amount">99</span><span class="price-period">/month</span></div>
+                        <span class="price-currency">$</span>
+                        <span class="price-amount">99</span>
+                        <span class="price-period">/month</span>
                     </div>
                     <p class="pricing-description">Try OrangePulse risk-free with full access to all features</p>
 
