--- a/welcome-email-branded.html
+++ b/welcome-email-branded.html
@@ -106,7 +106,7 @@
         <div class="header">
             <img src="https://orangepulse.net/Logo/orange-pulse-bot-logo.jpg" alt="OrangePulse Logo" class="logo">
             <h1>🎉 Welcome to our family!</h1>
-            <p style="margin: 10px 0 0 0; font-size: 16px;">Your journey to automated trading starts now</p>
+            <p style="margin: 10px 0 0 0; font-size: 16px;">Your 14-day FREE trial starts now</p>
         </div>
 
         <div class="content">
@@ -114,6 +114,16 @@
 
             <p>Thank you for trusting <strong>OrangePulse</strong> with your trading automation. We're excited to help
                 you maximize your trading potential!</p>
+
+            <div
+                style="background: #fff3cd; border: 2px solid #ffc107; padding: 15px; border-radius: 6px; margin: 20px 0;">
+                <p style="margin: 0 0 10px 0; font-size: 16px; color: #333;"><strong>⏰ Your Trial Period:</strong></p>
+                <p style="margin: 0 0 5px 0; color: #333;">• <strong>Trial starts:</strong> Today</p>
+                <p style="margin: 0 0 5px 0; color: #333;">• <strong>Trial ends:</strong> [DATE + 14 DAYS]</p>
+                <p style="margin: 0 0 5px 0; color: #333;">• <strong>First charge:</strong> $99 on [DATE + 14 DAYS]</p>
+                <p style="margin: 10px 0 0 0; font-size: 14px; color: #666;">💡 Cancel anytime before trial ends = $0
+                    charge</p>
+            </div>
 
             <h2 style="color: #F7931A; margin-top: 30px;">📋 Your Next Steps:</h2>
 
