--- a/index.html
+++ b/index.html
@@ -440,19 +440,19 @@
             <div class="dca-params glass">
                 <div class="param-item">
                     <span class="param-name">Price Deviation</span>
-                    <span class="param-val">0.5%</span>
+                    <span class="param-desc">Distance between SO trigger levels</span>
                 </div>
                 <div class="param-item">
                     <span class="param-name">Volume Scale</span>
-                    <span class="param-val">1.55x</span>
+                    <span class="param-desc">Size multiplier for each SO</span>
                 </div>
                 <div class="param-item">
                     <span class="param-name">Step Scale</span>
-                    <span class="param-val">1.05x</span>
+                    <span class="param-desc">Spacing multiplier between SOs</span>
                 </div>
                 <div class="param-item">
                     <span class="param-name">Max SO</span>
-                    <span class="param-val">10 + 3 MSO</span>
+                    <span class="param-desc">Number of Safety Orders available</span>
                 </div>
             </div>
         </div>
