--- a/index.html
+++ b/index.html
@@ -441,18 +441,22 @@
                 <div class="param-item">
                     <span class="param-name">Price Deviation</span>
                     <span class="param-desc">Distance between SO trigger levels</span>
+                    <span class="param-example">e.g. 0.5%</span>
                 </div>
                 <div class="param-item">
                     <span class="param-name">Volume Scale</span>
                     <span class="param-desc">Size multiplier for each SO</span>
+                    <span class="param-example">e.g. 1.55x</span>
                 </div>
                 <div class="param-item">
                     <span class="param-name">Step Scale</span>
                     <span class="param-desc">Spacing multiplier between SOs</span>
+                    <span class="param-example">e.g. 1.05x</span>
                 </div>
                 <div class="param-item">
                     <span class="param-name">Max SO</span>
                     <span class="param-desc">Number of Safety Orders available</span>
+                    <span class="param-example">e.g. 10 + 3 MSO</span>
                 </div>
             </div>
         </div>
@@ -925,14 +929,7 @@
                         <a href="mailto:support@orangepulse.net" class="btn btn-secondary">support@orangepulse.net</a>
                     </div>
 
-                    <div class="contact-option">
-                        <h3>📧 Newsletter</h3>
-                        <p>Get updates on new features, strategy tips, and market insights.</p>
-                        <form class="newsletter-form" id="newsletterForm">
-                            <input type="email" placeholder="your@email.com" required>
-                            <button type="submit" class="btn btn-primary">Subscribe</button>
-                        </form>
-                    </div>
+
                 </div>
 
                 <div class="disclaimer">
